--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-<p>webgl-time-series</p>
+<!doctype html>
+<html>
+
+<head>
+  <title>THREE.Line</title>
+  <style>
+    body {
+      margin: 0;
+    }
+
+    canvas {
+      width: 100%;
+      height: 100%
+    }
+
+  </style>
+</head>
+
+<body>
+  <div id="container"></div>
+  <script src="dist/three-line.js"></script>
+</body>
+
+</html>
