Add html and dev server to webpack

--- a/index.html
+++ b/index.html
@@ -2,24 +2,21 @@
 <html>
 
 <head>
-  <title>THREE.Line</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-    }
-
-    canvas {
-      width: 100%;
-      height: 100%
-    }
-
-  </style>
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <title>webgl-time-series</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
-  <div id="container"></div>
-  <script src="dist/three-line.js"></script>
+  <ul>
+    <li>
+      <a href="./dist/three-line.html">./dist/three-line.html</a>
+    </li>
+    <li>
+      <a href="./dist/pixi.html">./dist/pixi.html</a>
+    </li>
+  </ul>
 </body>
 
 </html>
