--- a/src/three-line.html
+++ b/src/three-line.html
@@ -2,17 +2,23 @@
 <html>
 
 <head>
-  <title>PIXI</title>
+  <title>THREE.Line</title>
   <style>
     * {
       margin: 0;
       padding: 0;
     }
 
+    canvas {
+      width: 100%;
+      height: 100%
+    }
+
   </style>
 </head>
 
 <body>
-<script type="text/javascript" src="pixi.js"></script></body>
+  <div id="container"></div>
+</body>
 
 </html>
