--- a/index.html
+++ b/index.html
@@ -9,14 +9,18 @@
 </head>
 
 <body>
-  <ul>
-    <li>
-      <a href="./dist/three-line.html">./dist/three-line.html</a>
-    </li>
-    <li>
-      <a href="./dist/pixi.html">./dist/pixi.html</a>
-    </li>
-  </ul>
+  <div>
+    <h2>
+      <a href="./dist/three-line.html">THREE.Line</a>
+    </h2>
+    <a href="https://threejs.org/">three.js</a> example
+  </div>
+  <div>
+    <h2>
+      <a href="./dist/pixi.html">PIXI.Graphics</a>
+    </h2>
+    <a href="http://www.pixijs.com/">PixiJS</a> example
+  </div>
 </body>
 
 </html>
